- Add more reponsive each pages - Issues when movie is bigger than width of parent then overflow bottom element

--- a/pythonweb/pythonweb/static/css/base.css
+++ b/pythonweb/pythonweb/static/css/base.css
@@ -14,9 +14,8 @@
 
 .main-container {
     float: left;
-    position: relative;
-    left: 50%;
-    /* overflow: visible; */
+    position: absolute;
+    left: 50%;  
 }
 
 #main-header {
