--- a/pythonweb/pythonweb/static/css/result.css
+++ b/pythonweb/pythonweb/static/css/result.css
@@ -1,3 +1,7 @@
+ul {
+    list-style-type: none;
+}
+
 .result-movie {
     margin-top: 10px;
 }
@@ -12,16 +16,35 @@
 }
 
 #table {
-    margin-top: 10px;
+    padding-bottom: 20px;
     width: 100%;
+    vertical-align:middle;
 }
 
 #votes-movie {
-    float:right;
+    text-align: right;
+    float: right;
+    width: 20%;
 }
 
 #vote-detail {
     background: #ADD8E6;
     border-style: none;
     margin: 0;
+}
+
+#choice-vote {
+    width: 80%;
+    float: left;
+    padding-bottom: 10px;
+}
+
+@media screen and (max-width:750px) {
+    #votes-movie{
+        width: 100%;
+    }
+    #choice-vote{
+        display: block;
+        
+    }
 }
